vendor: added toml

--- a/glide.yaml
+++ b/glide.yaml
@@ -6,3 +6,4 @@ import:
 - package: github.com/inconshreveable/log15
 - package: github.com/pressly/chi
   version: v2.0.0rc1
+- package: github.com/BurntSushi/toml
